# test-job-02

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: document.hpp  products_document.hpp  sale_document.hpp  sale_rules_document.hpp  saledocuments.hpp  saledocumentsfwd.hpp  size_t_from_string.hpp  type_traits.hpp  vector_from_string.hpp
src/: main.cpp  sale_rules_document.cpp
