cmake_minimum_required(VERSION 3.16)
project(SaleDocuments LANGUAGES CXX)
set(PROJECT_CXX_STANDARD cxx_std_20)
set(PROJECT_INCLUDE_FILES_DIR "${PROJECT_SOURCE_DIR}/include")
set(PROJECT_SOURCE_FILES_DIR "${PROJECT_SOURCE_DIR}/src")
set(PROJECT_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
set(PROGRAM_NAME Program_${PROJECT_NAME})
file(
    GLOB_RECURSE
    PROJECT_HEADERS
    CONFIGURE_DEPENDS
    "${PROJECT_INCLUDE_FILES_DIR}/*.h"
    "${PROJECT_INCLUDE_FILES_DIR}/*.hpp"
)
file(
    GLOB_RECURSE
    PROJECT_SOURCES
    CONFIGURE_DEPENDS
    "${PROJECT_SOURCE_FILES_DIR}/*.cpp"
)

add_executable(${PROGRAM_NAME} ${PROJECT_SOURCES} ${PROJECT_HEADERS})

set_target_properties(
    ${PROGRAM_NAME}
    PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${PROJECT_OUTPUT_DIRECTORY}
)

target_include_directories(${PROGRAM_NAME} PRIVATE ${PROJECT_INCLUDE_FILES_DIR})

target_compile_features(${PROGRAM_NAME} PUBLIC ${PROJECT_CXX_STANDARD})
